[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://fonts and themes/font.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=13]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=3]
color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxLine" id=4]

[sub_resource type="StyleBoxLine" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=8]
color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxLine" id=9]

[sub_resource type="StyleBoxLine" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -509.5
margin_top = -294.0
margin_right = 509.5
margin_bottom = 294.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -193.0
margin_top = -148.0
margin_right = 272.0
margin_bottom = 186.0
color = Color( 0.541176, 0.47451, 0.47451, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -154.0
margin_top = -194.0
margin_right = 154.0
margin_bottom = -130.0
custom_fonts/font = SubResource( 13 )
text = "Battle Arena"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.5
margin_top = -76.0
margin_right = 121.5
margin_bottom = 76.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 243.0
margin_bottom = 48.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../StartButton2")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Start Level 1"

[node name="StartButton2" type="Button" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 243.0
margin_bottom = 100.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../QuitButton")
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Start Level 2"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 243.0
margin_bottom = 152.0
focus_neighbour_top = NodePath("../StartButton2")
focus_neighbour_bottom = NodePath("../StartButton")
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/StartButton2" to="." method="_on_StartButton2_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
